# voice-tg-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
src/: config.py  handlers.py  main.py  openai_client.py
src/openai_client/: __init__.py  api.py  logic.py  utils.py
